/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package org.apache.flink.statefun.flink.core;
option java_package = "org.apache.flink.statefun.flink.core.generated";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message EnvelopeAddress {
    string namespace = 1;
    string type = 2;
    string id = 3;
}

message Payload {
    string class_name = 2;
    bytes payload_bytes = 3;
}

message Checkpoint {
    int64 checkpoint_id = 1;
}

message Envelope {
    EnvelopeAddress source = 1;
    EnvelopeAddress target = 2;

    oneof body {
        Checkpoint checkpoint = 4;
        Payload payload = 3;
    }

    // Used to describe these messages are part of a transaction
    string transaction_id = 5;
    enum TransactionMessage {
        NONE = 0;
        PREPARE = 1;
        ABORT = 2;
        COMMIT = 3;
        SAGAS = 4;
        READ = 5;
        BLOCKING = 6;
    }
    TransactionMessage transaction_message = 6;
    repeated EnvelopeAddress transaction_functions = 7;
}

message ResponseToTransactionFunction {
    bool success = 1;
    string transaction_id = 2;
    int64 lock_time = 3;
}

message Response {
     string request_id = 1;
     int32 status_code = 2;
     google.protobuf.Any message = 3;
}

message EgressMessageWithTime {
    Response arg = 1;
    oneof time {
        RepeatedTimes lock_times = 3;
        int64 deadlock_detection_time = 4; 
    }
}

/* This is required due to protobuf not supporting repeated in oneof */
message RepeatedTimes {
    repeated int64 times = 1;
}
